@@ -14,8 +14,8 @@
         <maven.plugin.version>2.6.1</maven.plugin.version>
         <war.plugin.version>2.3</war.plugin.version>
         <compiler.plugin>2.5.1</compiler.plugin>
-        <appengine.plugin.version>1.9.6</appengine.plugin.version>
-        <appengine.target.version>1.9.6</appengine.target.version>
+        <appengine.plugin.version>1.9.7</appengine.plugin.version>
+        <appengine.target.version>1.9.7</appengine.target.version>
 
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,48 +30,6 @@
         <module>chat-frontend</module>
         <module>chat-datastore</module>
     </modules>
-
-    <!--<build>-->
-        <!--<finalName>chat</finalName>-->
-
-        <!--<pluginManagement>-->
-            <!--<plugins>-->
-                <!--<plugin>-->
-                    <!--<groupId>org.codehaus.mojo</groupId>-->
-                    <!--<artifactId>gwt-maven-plugin</artifactId>-->
-                    <!--<version>${maven.plugin.version}</version>-->
-                <!--</plugin>-->
-                <!--<plugin>-->
-                    <!--<artifactId>maven-war-plugin</artifactId>-->
-                    <!--<version>2.1</version>-->
-                <!--</plugin>-->
-            <!--</plugins>-->
-        <!--</pluginManagement>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<artifactId>maven-compiler-plugin</artifactId>-->
-                <!--<version>2.1</version>-->
-                <!--<configuration>-->
-                    <!--<source>1.5</source>-->
-                    <!--<target>1.5</target>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-
-            <!--<plugin>-->
-                <!--<groupId>org.apache.tomcat.maven</groupId>-->
-                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-                <!--<version>2.0</version>-->
-                <!--<configuration>-->
-                    <!--<path>${tomcat.context}</path>-->
-                    <!--<port>${tomcat.webport}</port>-->
-                    <!--<ajpPort>${tomcat.ajpport}</ajpPort>-->
-                    <!--<systemProperties>-->
-                        <!--<JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>-->
-                    <!--</systemProperties>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
 
     <dependencyManagement>
         <dependencies>
@@ -136,9 +94,6 @@
     </dependencies>
 
     <build>
-        <plugins>
-
-        </plugins>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -162,7 +117,6 @@
                         <target>1.6</target>
                     </configuration>
                 </plugin>
-
             </plugins>
         </pluginManagement>
     </build>
